[DevTools] Application > Service Workers, fix live script receiving time

Before this patch, current site's service worker receive time is Unix
epoch time. This patch fixes this problem.

About the test for this CL:
ServiceWorkerTestRunner.js is modified, so if the old problem (showing Unix epoch time)
persists, then DevTools tests service-workers-view.js and service-workers-redundant.js
would fail.

Bug: 767790
Change-Id: I65aeadddcf03d381f8366e1157d85ac182202e15
Reviewed-on: https://chromium-review.googlesource.com/c/1376311
Commit-Queue: Haihong Li (Harley) <hhli@chromium.org>
Reviewed-by: Matt Falkenhagen <falken@chromium.org>
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#616849}
Former-commit-id: 0f242cca527636841032b152a3718a7f261ee11b